# Website-Scanner

./: .gitignore  .swp  LICENSE  README.md  main.py  plotter.py  pyproject.toml  requirements.txt  runner.py  tool.py
csa_report/: main.tex  sn-bibliography.bib
elsevier/: changes.md  feedback.md  main.abs  main.bbl  main.bib  main.tex
ieee/: main.pdf.bak  main.tex
ieee_conf/: feedback.md  main.bib  main.tex
ieee_paper/: main.tex  sn-bibliography.bib
report/: main.tex  sn-bibliography.bib
resources/: .~lock.ca_sites.csv#  .~lock.uk_sites.csv#  .~lock.us_sites.csv#  auditor_gen_source.html  big_airports_source.html  ca_reg_fin_inst.csv  ca_sites.csv  ca_sites.csv.bak  crown_corps_source.html  master_sites.csv  pull_small_airports.py  sites.md  temp.csv  uk_sites.csv  uk_sites.csv.bak  us_sites.csv  us_sites.csv.bak  website_checklist.md
results/: ca_fin.json  results.csv  stats_analysis.csv
scripts/: scan_all.sh  scan_authorities.sh  summarize_all.sh  summarize_error_leaks.py  summarize_error_leaks_all.py  summarize_headers.py  summarize_headers_all.py  summarize_headers_to_csv.py  summarize_headers_to_csv_v2.py  summarize_hsts_https.py  summarize_hsts_https_all.py  summarize_redirects.py  summarize_redirects_all.py  summarize_securitytxt.py  summarize_securitytxt_all.py  summarize_tls_cipher.py  summarize_tls_cipher_all.py  summarize_tls_cipher_all_v2.py
src/: config.py  main.py  origins.py  plotter.py  runner.py
tests/: cipher.py  connectivity.py  redirection.py  securitytxt.py  test_cipher.py  test_headers.py  test_hsts.py  test_https_connectivity.py  (+9 more)
(+300 files in other folders)
